# File_Compressor

./: README.md
file_comp/: .gitignore  CMakeLists.txt
file_comp/comp_algo/aiff_/: aiff_comp.cpp  aiff_comp.h
file_comp/comp_algo/aiff_wav-/: aiff_wav_comp.cpp  aiff_wav_comp.h
file_comp/comp_algo/bmp_/: bmp_comp.cpp  bmp_comp.h
file_comp/comp_algo/csv_/: csv_comp.cpp  csv_comp.h
file_comp/comp_algo/json_/: json_comp.cpp  json_comp.h
file_comp/comp_algo/log_/: log_comp.cpp  log_comp.h
file_comp/comp_algo/psd_/: psd_comp.cpp  psd_comp.h
file_comp/comp_algo/tiff_/: tiff_comp.cpp  tiff_comp.h
file_comp/comp_algo/txt_/: txt_comp.cpp  txt_comp.h
file_comp/comp_algo/wav_/: wav_comp.cpp  wav_comp.h
file_comp/comp_algo/xml_/: xml_comp.cpp  xml_comp.h
file_comp/hdr/: all_comp_algo.h  common.h  file_comp.h
file_comp/src/: MAYBE USED.cpp  file_comp.cpp  main.cpp
